2005-05-20  Carsten Dominik  <dominik@science.uva.nl>

	* textmodes/org.el (org-agenda-toggle-time-grid): New command.
	(org-agenda-use-time-grid, org-agenda-time-grid): New options.
	(org-agenda-add-time-grid-maybe): New function.
	(org-agenda): Call `org-agenda-add-time-grid-maybe'.
	(org-table-create): `dotimes' instead of `mapcar'.
	(org-xor): Simplified implementation.
	(org-agenda): `inhibit-redisplay' turned on.
	(org-agenda-change-all-lines): Use `org-format-agenda-item' to get
	a consistent line after a state change.
	(org-agenda-remove-times-when-in-prefix): New option.
	(org-prefix-has-time): New variable.
	(org-parse-time-string): Optional argument NODEFAULT.
	(org-format-agenda-item): Parse items for time-of-day
	specifications and move these into the prefix if possible.
	(org-agenda-priority): Get current heading, not previous heading
	during agenda remote editing.

2005-05-20  Juanma Barranquero  <lekktu@gmail.com>

	* emacs-lisp/cl-seq.el (reduce, fill, replace, remove*)
	(remove-if, remove-if-not, delete*, delete-if, delete-if-not)
	(remove-duplicates, delete-duplicates, substitute)
	(substitute-if, substitute-if-not, nsubstitute, nsubstitute-if)
	(nsubstitute-if-not, find, find-if, find-if-not, position)
	(position-if, position-if-not, count, count-if, count-if-not)
	(mismatch, search, sort*, stable-sort, merge, member*)
	(member-if, member-if-not, assoc*, assoc-if, assoc-if-not)
	(rassoc*, rassoc-if, rassoc-if-not, union, nunion)
	(intersection, nintersection, set-difference, nset-difference)
	(set-exclusive-or, nset-exclusive-or, subsetp, subst-if)
	(subst-if-not, nsubst, nsubst-if, nsubst-if-not, sublis)
	(nsublis, tree-equal): Improve argument/docstring consistency.

	* subr.el (send-string, send-region):
	Remove obsolescence declaration.
	(window-dot, set-window-dot, read-input, show-buffer)
	(eval-current-buffer, string-to-int):
	Add release number to obsolescence declarations.

2005-05-19  Kim F. Storm  <storm@cua.dk>
